--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <body>
         <img src="http://www.freakingnews.com/pictures/14500/Fat-Dog--14931.jpg">
         <h1>Ian Do</h1>
-        <p>Unanimous MVP of 2016</p>
+        <div class="div2">
+            <p class="mvp">Unanimous MVP of 2016</p>
+        </div>
+        <div class="div1"> In Mini-Golf</div>
+        
     </body>
 </html>
