added golf animations

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <img src="http://www.freakingnews.com/pictures/14500/Fat-Dog--14931.jpg">
+        <img class="dog" src="http://www.freakingnews.com/pictures/14500/Fat-Dog--14931.jpg">
         <h1>Ian Do</h1>
         <div class="div2">
-            <p class="mvp">Unanimous MVP of 2016</p>
+               <p class="mvp">Unanimous MVP of 2016</p>
         </div>
         <div class="div1"> In Mini-Golf</div>
-        
+        <div class="div4">
+            <img class="golf" src="http://res.freestockphotos.biz/pictures/9/9978-illustration-of-a-golf-club-pv.png">
+        </div>
+        <div class="div3">
+                <img class="cup" src="http://im.snibgo.com/cm_plain_mug.png">
+        </div>
     </body>
 </html>
